--- a/pages/key-design-data.html
+++ b/pages/key-design-data.html
@@ -1,41 +1,168 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      <div id="navbar"></div>
+<head>
+  <title>Key Decision Makers Data</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <h1>Key Design Data</h1>
-      <p>Utilize our Key Design Data services to enhance your design projects.</p>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-      <div id="footer"></div>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Load Navbar dynamically
-        fetch('/pages/navbar.html')
-            .then(res => res.text())
-            .then(data => {
-                document.getElementById('navbar').innerHTML = data;
-            });
+  <style>
+    .hero-section {
+      background-image: url('https://datasnapsolutionsinc.com/assets/images/services/ICT-managment.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 100px 0;
+      text-align: center;
+      position: relative;
+    }
 
-        // Load Footer dynamically
-        fetch('/pages/footer.html')
-            .then(res => res.text())
-            .then(data => {
-                document.getElementById('footer').innerHTML = data;
-            });
-    </script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    .hero-section::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.6);
+    }
+
+    .hero-section h1 {
+      position: relative;
+      z-index: 1;
+      font-size: 3rem;
+      font-weight: bold;
+    }
+
+    .data-section {
+      padding: 60px 0;
+    }
+
+    .btn-block-custom {
+      background-color: #28a745;
+      color: white;
+      margin: 5px 0;
+      width: 100%;
+      text-align: left;
+      padding: 10px 15px;
+      border-radius: 5px;
+      border: none;
+    }
+
+    .btn-block-custom:hover {
+      background-color: #218838;
+    }
+
+    .btn-block-blue {
+      background-color: #2e86de;
+      color: white;
+    }
+
+    .btn-block-blue:hover {
+      background-color: #1e6bb8;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div id="navbar"></div>
+
+  <!-- Hero Section -->
+  <div class="hero-section">
+    <h1>KEY DECISION MAKERS DATA</h1>
+  </div>
+
+  <!-- Content Section -->
+  <div class="container data-section">
+    <div class="row">
+      <div class="col-md-8">
+        <h5 class="mb-3 font-weight-bold text-uppercase">Power your marketing with perfect genuine key decision makers
+          contact info</h5>
+        <p>It is imperative that any organization maintains an itemized and up-to-date email database through which they
+          can apprise their prospective customers about their products and services. Out of the various types of email
+          lists, the key decision makers list is the most sought-after one because decision makers have the authority
+          and capability to make strategic decisions who deter companies from making unwise decisions that impede
+          business growth.</p>
+        <p>The main decisions that are to be made by decision makers include financial and purchasing decisions. They
+          aim to take their companies to a higher level. More so, they aim to expand their businesses to foreign
+          countries.</p>
+        <p>Data Snap Solutions Inc., help them in this pursuit by giving them the databases of top management executives
+          of organizations, including CEO, COO, CFO, CIO, and CTO. We can dig out and get highly prospective list of the
+          key decision makers as per your requirements i.e., based on demography, companies, and the size of the
+          business.</p>
+        <p>Let your data-driven marketing be pertinent. Marketing is more than just how many people you can reach out to
+          via email. It is about being genuine to each and every email recipient, every time you have an interaction.
+          Your email will be moved to trash in a split second if it is not useful or relevant to the recipient. Get in
+          touch with Data Snap Solutions Inc., to get verified data to successfully connect with your prospective
+          customers, which is the first step in sealing the deal. Our contact database is an on-demand resource, which
+          will help you engage with the right people in the right organizations.</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="https://datasnapsolutionsinc.com/assets/images/services/ICT-managment.jpg" class="img-fluid rounded"
+          alt="Key Decision Makers">
+      </div>
+    </div>
+
+    <!-- Button Lists -->
+    <div class="mt-5">
+      <h5 class="font-weight-bold">TOP PROFESSIONAL LISTS</h5>
+      <div class="row">
+        <div class="col-md-6">
+          <button class="btn btn-block-custom">Geo-Targeted B2B Decision Makers Marketing List</button>
+          <button class="btn btn-block-custom">CTO Email List</button>
+          <button class="btn btn-block-custom">CMO Email List</button>
+          <button class="btn btn-block-custom">CFO Email List</button>
+          <button class="btn btn-block-custom">CIO Email List</button>
+          <button class="btn btn-block-custom">CPA Email List</button>
+          <button class="btn btn-block-custom">IT VP Email List</button>
+          <button class="btn btn-block-custom">General Manager Email List</button>
+          <button class="btn btn-block-custom">Directors Email List</button>
+          <button class="btn btn-block-custom">Project Directors & Managers Email List</button>
+        </div>
+        <div class="col-md-6">
+          <button class="btn btn-block-custom btn-block-blue">Accounting & Taxing Professionals Email Lists
+            List</button>
+          <button class="btn btn-block-custom btn-block-blue">Chief & VP of HR Email List Email Lists List</button>
+          <button class="btn btn-block-custom btn-block-blue">Chief & VP of Operations Email List</button>
+          <button class="btn btn-block-custom btn-block-blue">Chief & VP of Software Email List</button>
+          <button class="btn btn-block-custom btn-block-blue">Chief & VP of Quality Email List</button>
+          <button class="btn btn-block-custom btn-block-blue">Aeronautics Email List</button>
+          <button class="btn btn-block-custom btn-block-blue">Chairman Email List</button>
+          <button class="btn btn-block-custom btn-block-blue">Chief Purchasing Officer Email List</button>
+          <button class="btn btn-block-custom btn-block-blue">Software Developers Email List</button>
+          <button class="btn btn-block-custom btn-block-blue">Event Organizer Email List</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="footer"></div>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Load Navbar dynamically
+    fetch('/pages/navbar.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('navbar').innerHTML = data;
+      });
+
+    // Load Footer dynamically
+    fetch('/pages/footer.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      });
+  </script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
+
 </html>
