--- a/pages/industry.html
+++ b/pages/industry.html
@@ -1,41 +1,161 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      <div id="navbar"></div>
+<head>
+  <title>Industry Data</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-       <h1>Industry Solutions</h1>
-       <p>Explore our tailored solutions for various industries.</p>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-      <div id="footer"></div>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Load Navbar dynamically
-        fetch('/pages/navbar.html')
-            .then(res => res.text())
-            .then(data => {
-                document.getElementById('navbar').innerHTML = data;
-            });
+  <!-- Custom CSS -->
+  <style>
+    .hero-section {
+      background-image: url('https://datasnapsolutionsinc.com/assets/images/services/energy-envernament.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 100px 0;
+      text-align: center;
+      position: relative;
+    }
 
-        // Load Footer dynamically
-        fetch('/pages/footer.html')
-            .then(res => res.text())
-            .then(data => {
-                document.getElementById('footer').innerHTML = data;
-            });
-    </script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    .hero-section::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.6);
+    }
+
+    .hero-section h1 {
+      position: relative;
+      z-index: 1;
+      font-size: 3rem;
+      font-weight: bold;
+    }
+
+    .section-content {
+      padding: 60px 15px;
+    }
+
+    .btn-custom {
+      background-color: #28a745;
+      color: white;
+      border: 2px solid #1e7e34;
+      margin-bottom: 10px;
+      width: 100%;
+      padding: 10px 15px;
+      border-radius: 5px;
+      transition: all 0.3s ease-in-out;
+      font-weight: 500;
+    }
+
+    .btn-custom:hover {
+      background-color: #218838;
+      transform: translateY(-3px);
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .btn-group-custom h5 {
+      margin-bottom: 20px;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- Navbar -->
+  <div id="navbar"></div>
+
+  <!-- Hero -->
+  <div class="hero-section">
+    <h1>INDUSTRY DATA</h1>
+  </div>
+
+  <!-- Content Section -->
+  <div class="container section-content">
+    <div class="row">
+      <div class="col-md-8">
+        <h5 class="font-weight-bold text-uppercase mb-3">Data is Just Futile If No Innovation Has Gone Into It</h5>
+        <p>The success of a marketing campaign depends solely on industry mailing database. Understanding your target
+          audience and giving you the accurate data you need to engage with your prospects is our job. All you need to
+          do is talk to the prospective clients and seal the deal. Augment the value of your marketing campaign through
+          our curated, relevant industry email database for any industry.</p>
+
+        <p>More than 50% of companies are stranded with customer unreachable database – non-contactable numbers
+          (inactive number, wrong number, or temporarily) and non-actionable emails (invalid email addresses). We, at
+          Data Snap Solutions Inc., maintain accountable and up-to-date data with accurate database. Our
+          technology-fueled database service leverages automation & machine learning and generates huge volumes of
+          contactable phone and email addresses of genuine accounts in a short span of time and facilitates you to touch
+          base with potential customers and maximize your sales & revenue.</p>
+
+        <h5 class="font-weight-bold text-uppercase mt-4 mb-3">Industries</h5>
+        <p>We aggregate the best of the industry sources in the world, especially from countries such as the USA, the
+          UK, Canada, and Australia. From the millions of data, you can obtain the data you want in just a few clicks.
+          Access the Data Snap Solutions Inc., insights seamlessly and our reports that include the important realms in
+          the important markets. The Industry data that we have will be useful for manufacturers, importers & exporters,
+          suppliers, and traders. The industries can be of any size, including small, medium, and enterprise.</p>
+      </div>
+
+      <div class="col-md-4 text-center">
+        <img src="https://datasnapsolutionsinc.com/assets/images/services/energy-envernament.jpg" alt="Industry Image"
+          class="img-fluid rounded">
+      </div>
+    </div>
+
+    <!-- Industry-Wise Lists Section -->
+    <div class="mt-5">
+      <h4 class="text-center font-weight-bold mb-4">Industry-Wise Lists</h4>
+      <div class="row">
+        <div class="col-md-4 btn-group-custom">
+          <button class="btn btn-custom">Agricultural Data</button>
+          <button class="btn btn-custom">Hemp & Cannabis Data</button>
+          <button class="btn btn-custom">Education Industry Data</button>
+          <button class="btn btn-custom">Cyber Risk Data</button>
+          <button class="btn btn-custom">IoT Data</button>
+          <button class="btn btn-custom">Automobile Manufacturers Data</button>
+          <button class="btn btn-custom">Packers & Movers Data</button>
+        </div>
+        <div class="col-md-4 btn-group-custom">
+          <button class="btn btn-custom">Transport & Logistics Data</button>
+          <button class="btn btn-custom">Manufacturing Companies Data</button>
+          <button class="btn btn-custom">Banking And Finance Industry Contact Database</button>
+          <button class="btn btn-custom">Real Estate Industry Email List</button>
+          <button class="btn btn-custom">Supply Chain And Logistics Industry Email List</button>
+          <button class="btn btn-custom">Life Science Industry Sales Leads</button>
+          <button class="btn btn-custom">3D Printing Industry Email List</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div id="footer"></div>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    fetch('/pages/navbar.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('navbar').innerHTML = data;
+      });
+
+    fetch('/pages/footer.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      });
+  </script>
+
+  <!-- Optional JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
+
 </html>
