--- a/pages/about.html
+++ b/pages/about.html
@@ -8,11 +8,112 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+    /* Banner styling */
+    .about-banner {
+      background: url("https://guardiansgroup.in/assets/images/serviece/office-support.jpg") no-repeat center center/cover;
+      height: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: bold;
+      position: relative;
+       
+    }
+    .about-banner::after {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.5);
+    }
+    .about-banner h1 {
+      position: relative;
+      z-index: 1;
+    }
+    /* Section headings */
+    h3 {
+      font-weight: bold;
+      margin-bottom: 15px;
+      color: #001BB7;
+    }
+    p {
+      text-align: justify;
+    }
+  </style>
+
   </head>
   <body>
     <div id="navbar"></div>
-     <h1>About Us</h1>
-    <p>Welcome to our about page!</p>
+
+ <!-- Main Content -->
+
+ <div class="about-banner">
+  About Us
+ </div>
+  <div class="container py-5">
+
+    <!-- Company Overview -->
+    <div class="row align-items-center mb-5">
+      <div class="col-md-7">
+        <h3>COMPANY OVERVIEW</h3>
+        <p><strong>Make Informed Decisions through Reliable, High-quality, and Well-founded Data</strong></p>
+        <p>Data Snap Solutions Inc., Data solution provider, headquartered in Willington, Delaware. 
+          We assist companies to achieve a profitable growth and being a backbone in providing 
+          the world’s most comprehensive B2B database.</p>
+        <p>We work with numerous clients from various businesses regardless of the size by offering 
+          them comprehensive, next-generation data solutions, from start to finish, through 
+          cutting-edge business models. In quest to take your data-driven approaches to a higher 
+          level, we have created our newest business archetypes and innovative data solutions, 
+          exclusively for B2B markets, tailor-made to your business necessities.</p>
+      </div>
+      <div class="col-md-5">
+        <img src="https://quasa.io/storage/images/news/yUJWI6j3EVtTC2Y72ozNHuPNfL8nYxxQQq4V3eLS.jpg" class="img-fluid rounded shadow"  alt="Company Overview"  >
+      </div>
+    </div>
+
+    <!-- Mission -->
+    <div class="mb-5">
+      <h3>MISSION</h3>
+      <p>We are driven by our client relationship. We promise to provide 10% or more quality 
+        data and the best client relationship that they have experienced before. We are a 
+        family inspired by our data, team work and helping customers succeed.</p>
+    </div>
+
+    <!-- Vision -->
+    <div class="mb-5">
+      <h3>VISION</h3>
+      <p>We envision ourselves as pioneers in data-driven innovation, delivering 
+        smart and scalable solutions that empower businesses worldwide.</p>
+    </div>
+
+    <!-- Make Data Facile -->
+    <div class="mb-5">
+      <h3>MAKE DATA FACILE AND EASY-TO-MANAGE</h3>
+      <p>Data-driven marketing is more than just introducing your products and services to the world. 
+        It’s all about leveraging data to do smart marketing, regardless of the media you are working on. 
+        The firms that are well grounded are those that have a firm grip on data-driven marketing. 
+        Thus, they are cognizant of their prospective clients and rivals.</p>
+    </div>
+
+    <!-- Take Control -->
+    <div class="mb-5">
+      <h3>TAKE CONTROL OF YOUR DATA</h3>
+      <p>Data Snap Solutions Inc., has within the company IT mavens who are erudite in data solutions, 
+        database management, and data-driven marketing. We let you structure your data and have a 
+        complete control of it. Our data experts can help you in growing your business through a gamut 
+        of services, including consultancy, data-driven marketing, and Outsourcing solutions. 
+        We are the trailblazers of business leveraging data intelligence.</p>
+    </div>
+
+  </div>
+
+
+
+
+
     <div id="footer"></div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
