--- a/pages/footer.html
+++ b/pages/footer.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <footer class="text-white pt-5" style="background-color:#0d2240;">
+    <footer class="text-white pt-5" style="background-color:#0a165a;">
   <div class="container">
     <div class="row">
       
