--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -115,7 +115,7 @@
 
 
 <!-- 🔹 Main Navbar -->
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg ">
   <div class="container">
     <!-- Toggler -->
     <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
@@ -123,9 +123,9 @@
     </button>
 
     <!-- Navbar Links -->
-    <div class="collapse navbar-collapse" id="mainNavbar">
+    <div class="collapse navbar-collapse " id="mainNavbar">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/pages/about.html">About Us</a></li>
 
         <!-- Data Services Dropdown -->
